--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "",
-  "main": "1-intro.js",
+  "description": "tutorial learning node js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.1.3",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
+  "jshintConfig":{
+    "curly": true,
+    "eqeqeq": true,
+    "esversion":6
   }
 }
