--- a/2-express-tutorial/package.json
+++ b/2-express-tutorial/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.16"
   },
-  "jshintConfig":{
+  "jshintConfig": {
     "curly": true,
     "eqeqeq": true,
-    "esversion":8
+    "esversion": 8
   }
 }
